# cruisemesh

./: .DESIGN.md.swp  .gitignore  AGENT-TODO.md  AGENTS.md  BLE_1TO1_MULING.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONNECTIVITY_INDICATOR.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  DTN_AUDIT.md  DTN_TODOS.md  LOCAL_BACKUP_RESTORE.md  MESSAGE_LONGPRESS_OVERLAY.md  ONBOARDING_SCRIPT.md  README.md  ROADMAP.md  RUST_MIGRATION_TODOS.md  SECURITY-DESIGN.md  SECURITY.md  TODO.md  UI_TODOS.md  UI_UX_REVIEW.md  fable-todo.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  field_report.md
.github/workflows/: android-release.yml  fuzz-smoke.yml  ios-release.yml  ios.yml  pr40-ios-validation.yml  rust.yml  ui-localization.yml
android/: gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  keystore.properties.example  proguard-rules.pro
android/gradle/: libs.versions.toml
core/: Cargo.toml  build-android.sh  build-ios.sh
core/src/: authoring.rs  backup.rs  content.rs  crypto.rs  engine.rs  framing.rs  gossip.rs  groups.rs  identity.rs  lan_session.rs  lan_util.rs  lib.rs  limits.rs  protocol.rs  recipient_hints.rs  relay_wire.rs  semantic.rs  store.rs  transport_policy.rs
core/tests/: mesh_sim.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: backup_wire.rs  ble_reassembly.rs  noise_handshake.rs  protocol_decoders.rs  relay_wire.rs
ios/: ExportOptions-AppStoreConnect.plist  ExportOptions-TestFlight.plist  README.md  project.yml
ios/CruiseMesh/: CruiseMesh.entitlements  CruiseMeshApp.swift  Info.plist  Localizable.xcstrings  PrivacyInfo.xcprivacy
ios/CruiseMeshTests/: AttachmentPayloadTests.swift  BackupCompatibilityTests.swift  BackupServiceTests.swift  BluetoothAudioBackoffTests.swift  CarryHopTtlTests.swift  ChatListLogicTests.swift  ChatRowModelTests.swift  ChatVisibilityTests.swift  ContactReachabilityTests.swift  DigestSyncTests.swift  DraftChangeSignalTests.swift  FrameFramingTests.swift  FriendTextTests.swift  GroupChatLogicTests.swift  GroupMessagingTests.swift  LanEndpointStoreTests.swift  LanScanPlannerTests.swift  LanSubnetScanTests.swift  LanTransportTests.swift  MeshRouterStateTests.swift  MessageInfoRowTests.swift  PhotoViewerTests.swift  RelayClientTests.swift  (+8 more)
relayd/: Caddyfile  Cargo.toml  DEPLOY.md  Dockerfile  build.rs  cloud-config.yaml  docker-compose.yml  provision-hetzner.sh
relayd/src/: lib.rs  main.rs
relayd/tests/: e2e_fanout.rs  e2e_limits.rs  e2e_mailbox.rs  e2e_mule_bridge.rs  e2e_ws.rs
specs/: adversarial-payload-review.md  cellular-gateway.md  connection-request-inbox.md  friends-of-friends.md  group-management-v1.md  group-relay-durability.md  lan-field-validation-checklist.md  nearby-connections-eval.md  out-of-band-friending.md  per-group-digests.md  profile-photo-sync.md  same-lan-transport.md  t11-hidden-kinds-digest-audit.md
tools/: check_android_elf_alignment.py  check_ui_localization.py  extract_android_compose_strings.py  generate_ios_string_catalog.py  play_publish.py  testflight_distribute.py
(+288 files in other folders)
