[package]
name = "cruisemesh-core"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true

[lib]
name = "cruisemesh_core"
crate-type = ["cdylib", "staticlib", "lib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["uniffi/cli"]

[dependencies]
uniffi = { version = "0.28" }
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand_core = { version = "0.6", features = ["getrandom"] }
blake2 = "0.10"
data-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
crypto_box = "0.9"
chacha20poly1305 = "0.10"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[dev-dependencies]
uniffi = { version = "0.28", features = ["bindgen-tests"] }

[features]
cli = ["uniffi/cli"]
