[package]
name = "cruisemesh-relayd"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
cruisemesh-core = { path = "../core" }
futures-util = "0.3"
tempfile = "3"
tokio-tungstenite = "0.26"
tower = { version = "0.5", features = ["util"] }
